Select z-index fix

--- a/themes/gsgsite/assets/css/main.css
+++ b/themes/gsgsite/assets/css/main.css
@@ -3373,7 +3373,7 @@ html[lang=en-US] .housesys__menu_desc>div {
   margin: 0;
   background-color: #282828;
   border-radius: 0;
-  z-index: 5;
+  z-index: 8;
   top: 0;
   padding-top: 25px;
 }
